--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,153 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+Library/metadata/00/00000000000000001000000000000000
+Library/metadata/00/00000000000000001000000000000000.info
+Library/metadata/00/00000000000000002000000000000000
+*.info
+Library/metadata/00/00000000000000003000000000000000
+Library/metadata/00/00000000000000004000000000000000
+Library/metadata/00/00000000000000004100000000000000
+Library/metadata/00/00000000000000005000000000000000
+Library/metadata/00/00000000000000005100000000000000
+Library/metadata/00/00000000000000006000000000000000
+Library/metadata/00/00000000000000006100000000000000
+Library/metadata/00/00000000000000007000000000000000
+Library/metadata/00/00000000000000007100000000000000
+Library/metadata/00/00000000000000008000000000000000
+Library/metadata/00/00000000000000009000000000000000
+Library/metadata/00/0000000000000000a000000000000000
+Library/metadata/00/0000000000000000a100000000000000
+Library/metadata/00/0000000000000000b000000000000000
+Library/metadata/00/0000000000000000c000000000000000
+Library/metadata/0a/0a5f5ecf5306c6841afc864f64515b57
+Library/metadata/0d/0d3bb855445e36e479c85976fc88383a
+Library/metadata/12/12fd8a0055b84bb59e84c9835a37e333
+Library/metadata/1c/1c6d1fbb51834b64847b1b73a75bfc77
+Library/metadata/21/21eff446d50eaf44a85985cd4c0b6fa1
+Library/metadata/26/2682a692a2be7e14e901a738c7806da0
+Library/metadata/2f/2fe3476eabbbb6c448e6b55a2cc471f5
+Library/metadata/30/307433eba81a469ab1e2084d52d1a5a2
+Library/metadata/32/32188fd89022c154c81befa2f0e00be0
+Library/metadata/32/328cc881519068e4eb7db4bb907ad2d9
+Library/metadata/38/38c8faf1788024c02930a0c68a6e0edc
+Library/metadata/40/405b9b51bb344a128608d968297df79c
+Library/metadata/41/4113173d5e95493ab8765d7b08371de4
+Library/metadata/42/4277762b3c154fab9f2e968e868bbbd7
+Library/metadata/46/463462d444f5829439d324c25f1645da
+Library/metadata/49/49f5766d0d4954f44b85d4bbd7131677
+Library/metadata/4b/4ba2329b63d54f0187bcaa12486b1b0f
+Library/metadata/51/517af1b5b81b93b43b9745d58f017562
+Library/metadata/53/53ebcfaa2e1e4e2dbc85882cd5a73fa1
+Library/metadata/57/5782f9e9e6e0bb94bac99aeea24814fc
+Library/metadata/5a/5a6fd44cceb264d4d867dcf4de244147
+Library/metadata/5f/5f32cd94baa94578a686d4b9d6b660f7
+Library/metadata/66/6694a0d665145e340a440ea9acbd12b8
+Library/metadata/69/6981461fe431401459211818212a29cf
+Library/metadata/6a/6abf4b4cbfd0454e850ffc1ec9140b58
+Library/metadata/6c/6cdf1e5c78d14720aaadccd4c792df96
+Library/metadata/73/739bbd9f364b4268874f9fd86ab3beef
+Library/metadata/76/76bb3a25b27257f489392ef71d39d602
+Library/metadata/80/80a3616ca19596e4da0f10f14d241e9f
+Library/metadata/83/8382b2bb260241859771b69b7f377a8d
+Library/metadata/84/84ca94c19f25ae14d83aa41bb3654390
+Library/metadata/85/852e56802eb941638acbb491814497b0
+Library/metadata/86/86f4de9468454445ac2f39e207fafa3a
+Library/metadata/87/870353891bb340e2b2a9c8707e7419ba
+Library/metadata/8e/8e0cd8ed44d4412cbe0642067abc9e44
+Library/metadata/8e/8e7066e382b0fc749b25dbb1a3004dfe
+Library/metadata/90/9078b7128e594410d9b89e5b24cffd01
+Library/metadata/97/97decbdab0634cdd991f8d23ddf0dead
+Library/metadata/a9/a9eca0f14a0d7804aacd91cc29c85638
+Library/metadata/ad/adebbd281f1a4ef3a30be7f21937e02f
+Library/metadata/b2/b2b693dffac3a4433b3114fea0b7fd4e
+Library/metadata/b2/b2bead50dbf86924f8e51f03ddbebf70
+Library/metadata/b5/b5d4ac2df9933be45b21844c10826701
+Library/metadata/d0/d0157dfb2c1c99642835b6a71fd74d39
+Library/metadata/d0/d05b96cee66e14240838de167097537a
+Library/metadata/d9/d91035c548f23744c9bfb107348ed1c0
+Library/metadata/dc/dc443db3e92b4983b9738c1131f555cb
+Library/metadata/df/df974863ca687cb449bbd063228923ad
+Library/metadata/e1/e1007cd261c84053beb0c3537782908d
+Library/metadata/f5/f5f67c52d1564df4a8936ccd202a3bd8
+Library/metadata/f7/f70555f144d8491a825f0804e09c671c
+Library/metadata/f7/f7b54ff4a43d4fcf81b4538b678e0bcc
+*.bin
+*.asset
+Library/assetDatabase3
+*.db
+Library/AnnotationManager
+Library/AssetImportState
+Library/AssetServerCacheV3
+Test_Data/output_log.txt
+Test_Data/Mono/mono.dll
+Library/BuildPlayer.prefs
+Library/CurrentLayout.dwlt
+Library/expandedItems
+Library/LastBuild.buildreport
+Library/LastSceneManagerSetup.txt
+Library/LibraryFormatVersion.txt
+Library/ScriptAssemblies/Assembly-CSharp-Editor.dll
+Library/ScriptAssemblies/Assembly-CSharp-Editor.dll.mdb
+Library/ScriptAssemblies/Assembly-CSharp.dll
+Library/ScriptAssemblies/Assembly-CSharp.dll.mdb
+Library/ScriptAssemblies/BuiltinAssemblies.stamp
+Library/ScriptMapper
+Library/UnityAssemblies/nunit.framework.dll
+Library/UnityAssemblies/nunit.framework.xml
+Library/UnityAssemblies/UnityEditor.dll
+Library/UnityAssemblies/UnityEditor.xml
+Library/UnityAssemblies/UnityEngine.Analytics.dll
+Library/UnityAssemblies/UnityEngine.Analytics.xml
+Library/UnityAssemblies/UnityEngine.dll
+Library/UnityAssemblies/UnityEngine.HoloLens.dll
+Library/UnityAssemblies/UnityEngine.HoloLens.xml
+Library/UnityAssemblies/UnityEngine.Networking.dll
+Library/UnityAssemblies/UnityEngine.Networking.xml
+Library/UnityAssemblies/UnityEngine.TestRunner.dll
+Library/UnityAssemblies/UnityEngine.TestRunner.xml
+Library/UnityAssemblies/UnityEngine.UI.dll
+Library/UnityAssemblies/UnityEngine.UI.xml
+Library/UnityAssemblies/UnityEngine.VR.dll
+Library/UnityAssemblies/UnityEngine.VR.xml
+Library/UnityAssemblies/UnityEngine.xml
+Library/UnityAssemblies/version.txt
+Temp/UnityTempFile-ac27b2ebf653af74c84d416ca5d2065c
+Temp/UnityTempFile-aaae32154e397e7499ed7e2107301ac1
+Temp/UnityLockfile
+Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
+Test_Data/globalgamemanagers
+Test_Data/globalgamemanagers.assets
+Test_Data/level0
+Test_Data/level0.resS
+Test_Data/Managed/Assembly-CSharp.dll
+Test_Data/Managed/Assembly-CSharp.dll.mdb
+Test_Data/Managed/Mono.Security.dll
+Test_Data/Managed/Mono.Security.dll.mdb
+Test_Data/Managed/mscorlib.dll
+Test_Data/Managed/mscorlib.dll.mdb
+Test_Data/Managed/System.Core.dll
+Test_Data/Managed/System.Core.dll.mdb
+Test_Data/Managed/System.dll
+Test_Data/Managed/System.dll.mdb
+Test_Data/Managed/UnityEngine.dll
+Test_Data/Managed/UnityEngine.dll.mdb
+Test_Data/Managed/UnityEngine.Networking.dll
+Test_Data/Managed/UnityEngine.Networking.dll.mdb
+Test_Data/Managed/UnityEngine.UI.dll
+Test_Data/Managed/UnityEngine.UI.dll.mdb
+Test_Data/Mono/etc/mono/1.0/DefaultWsdlHelpGenerator.aspx
+Test_Data/Mono/etc/mono/1.0/machine.config
+Test_Data/Mono/etc/mono/2.0/Browsers/Compat.browser
+Test_Data/Mono/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+Test_Data/Mono/etc/mono/2.0/machine.config
+Test_Data/Mono/etc/mono/2.0/settings.map
+Test_Data/Mono/etc/mono/2.0/web.config
+Test_Data/Mono/etc/mono/browscap.ini
+Test_Data/Mono/etc/mono/config
+Test_Data/Mono/etc/mono/mconfig/config.xml
+Test_Data/Mono/MonoPosixHelper.dll
+Test_Data/PlayerConnectionConfigFile
+Test_Data/Resources/unity default resources
+Test_Data/Resources/unity_builtin_extra
+Test_Data/sharedassets0.assets
